[package]
name = "aetherion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable Link-Time-Optimization in release builds
[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    ### Currently Used Features:
    "bevy_asset",         # Assets management
    "bevy_winit",         # Window management
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_render",        # Rendering framework core
    "bevy_text",          # Text/font rendering
    "bevy_sprite",        # 2D (sprites) rendering

    "x11", # Linux: Support X11 windowing system

    "tonemapping_luts",
    "ktx2",             # preferred format for GPU textures
    "zstd",             # needed if using zstd in KTX2 files

    ### Future/Planned Features:
    # "bevy_gltf",          # GLTF 3D assets format support
    # "bevy_scene",         # Scenes management
    # "bevy_gilrs",         # Gamepad input support
    # "bevy_audio",         # Builtin audio -> Consider using: https://github.com/NiklasEi/bevy_kira_audio
    # "filesystem_watcher", # Asset hot-reloading
    # "animation",          # Animation support
    # "serialize",          # Support for `serde` Serialize/Deserialize

    ### Doesn't Work For Now:
    # "wayland",            # Linux: Support Wayland windowing system

    ### Unused Features:
    # "android_shared_stdcxx",
    # "bevy_ui",               # UI toolkit
    # "subpixel_glyph_atlas",  # Subpixel antialiasing for text/fonts
    # "bevy_dynamic_plugin",   # Support for loading of `DynamicPlugin`s

    # "png",
    # "hdr",
    # "vorbis",
    # "dds",
    # "jpeg",
    # "bmp",
    # "tga",
    # "basis-universal",
    # "flac",
    # "mp3",
    # "wav",

    ### Development/Debug Features:
    # "dynamic_linking", # Dynamic linking for faster compile-times
    # "trace",           # Enable tracing for performance measurement
    # "trace_tracy",     # Tracing using `tracy`
    # "trace_chrome",    # Tracing using the Chrome format
    # "wgpu_trace",      # WGPU/rendering tracing
] }
bevy_egui = { version = "0.20.2", default-features = false, features = [
    ### Currently Used Features:
    "default_fonts",

    ### Unused Features:
    # "manage_clipboard",
    # "open_url",
] }
bevy_pkv = "0.7.0"
bevy_rapier3d = { version = "0.21.0", features = ["simd-stable"] }
leafwing-input-manager = { version = "0.9.1", default-features = false, features = [
    ### Currently Used Features:

    ### Unused Features:
    # "egui",
    # "ui",
] }
serde = "1.0.171"
strum = "0.24.1"
strum_macros = "0.24.3"
